fix: ensure removed rows from the manual input form display values when readded

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,5 +1,5 @@
 distance_matrix_ai:
-  api_key:
+  api_key: ThisIsATemplateValuePutInHere
 taglines:
 - On a warm summers evening, on a train bound for nowhere, I met up with the Gambler
 - Ted Porter should do a pint
