fix: settings saving

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -44,6 +44,7 @@ taglines:
 - 2020+1/22 was our Golden Season
 - The next man to win an award at SU Ball will be a real club badger indeed
 - JP & Sonny were the best
+- This is a test phrase
 teams:
 - 1s
 - 2s
