final commit before the restructuring

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -42,9 +42,10 @@ taglines:
 - Bless the maker and his water
 - Long live the fighters
 - 2020+1/22 was our Golden Season
-- The next man to win an award at SU Ball will be a real club badger indeed
+- The next man to win an award at SU Ball will be a real club badger indeed.
 - JP & Sonny were the best
 - This is a test phrase
+- This is another test phrase
 teams:
 - 1s
 - 2s
