--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.2.5
+gspread==6.1.2
+pandas==2.0.3
+protobuf==5.27.3
 PyYAML==6.0.1
-PyYAML==6.0.1
+PyYAML==6.0.2
 Requests==2.32.3
 tqdm==4.66.2
-Werkzeug==3.0.3
